--- a/MFCChatServer/MFCChatServer.vcxproj.filters
+++ b/MFCChatServer/MFCChatServer.vcxproj.filters
@@ -71,5 +71,11 @@
     <Image Include="res\MFCChatServer.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\bitmap1.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\BlueTiles.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
